syntax = "proto3";

package deployproto;

service Deployinator {
  rpc TriggerDeploy(DeployMessage) returns (DeployResponse) {}
  rpc DeployStatus(DeployMessage) returns (DeployStatusMessage) {}
}
message DeployMessage {
  string name = 1;
  string namespace = 2;
  string version = 3;
  string domain = 4;
  string cenv = 5;
  string projectID = 6;
}

message DeployStatusMessage {
  string status = 1;
  string runningversion = 2;
  string other = 3;
}

message DeployResponse { string success = 1; }